CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(PatchGraph)

SET(CMAKE_CXX_STANDARD 11)

SET(SOURCES
    src/Main.cpp)

SET(HEADERS
    src/Frac.hpp
    src/PatchGraph.hpp
    src/PatchGraph.impl.hpp)

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)

ADD_EXECUTABLE(main ${SOURCES})

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(main ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES})

ADD_CUSTOM_TARGET(format
    COMMAND clang-format -style=file -i ${SOURCES} ${HEADERS}
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
